--- a/news_dags/dockerfile
+++ b/news_dags/dockerfile
@@ -2,18 +2,18 @@ FROM python:3.9
 
 WORKDIR /news_dags
 
-RUN pip install dagit dagster
-
-# Copy your code and workspace to /opt/dagster/app
 COPY . /news_dags/
 
-ENV PYTHONPATH=/news_dags
+RUN pip install -r requirements.txt
+RUN apt-get update && \
+    apt-get install nano
+
+# Copy your code and workspace to /opt/dagster/app
+
+ENV PYTHONPATH=/news_dags/src
 ENV DAGSTER_HOME=/news_dags/
 
 # Copy dagster instance YAML to $DAGSTER_HOME
 
 EXPOSE 3000
 
-CMD ["apt-get update"]
-CMD ["apt-get install nano"]
-ENTRYPOINT ["dagit", "-f", "news_dags/repository.py"]
