added upload to google cloud bucket

--- a/news_dags/requirements.txt
+++ b/news_dags/requirements.txt
@@ -2,7 +2,7 @@ dagit
 dagster
 pandas
 yfinance
-google-cloud
+google-cloud-bigquery 
 requests
 finviz @ git+https://github.com/mariostoev/finviz@c97173ab8e836acabf2b629102a447a906550c7c
 vaderSentiment
