--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,3 +1,3 @@
-home = C:\Python39
+home = /home/codespace/.python/current/bin
 include-system-site-packages = false
-version = 3.9.13
+version = 3.10.4
