--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,13 @@ Scripts/
 filing_files/
 */Lib/
 others/
-*.db
+
 git rm --cached <file>
 yfinance.cache
 share/*
 etc/*
 __pycache__/
-*.csv
+
 *.json
 **/__pycache__/
 __pycache__
@@ -25,10 +25,16 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# linux virtual environment
+bin/
+lib64
+run_info
+/src/cta_blue/storage/
 
 # custom
 .vscode/
 *.cfg
+
 
 share/
 include/
@@ -149,6 +155,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+.json
 .env
 .venv
 env/
