updated for cloud run

--- a/src/news_section/requirements.txt
+++ b/src/news_section/requirements.txt
@@ -1,9 +1,13 @@
-pandas
-beautifulsoup4
-httpx
-yfinance
+aiosignal
+async-timeout
+attrs
 finvizfinance
+google-cloud-bigquery
+grpcio-status
+httpx
+pip-chill
 praw
 pyarrow
 python-dotenv
-google-cloud-bigquery
+yarl
+yfinance
