--- a/src/news_section/requirements.txt
+++ b/src/news_section/requirements.txt
@@ -1,13 +1,14 @@
 aiosignal
 async-timeout
-attrs
 finvizfinance
+functions-framework
 google-cloud-bigquery
 grpcio-status
 httpx
 pip-chill
 praw
-pyarrow
+pytest
 python-dotenv
+streamlit
 yarl
 yfinance
