--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "calculate-dcf"
-version = "0.2.0"
+version = "0.1.0"
 description = ""
 authors = ["kollerbud <kollerbud@gmail.com>"]
 readme = "README.md"
@@ -13,10 +13,26 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.11"
+tiktoken = "^0.8.0"
 streamlit = "^1.41.1"
 requests = "^2.32.3"
 bs4 = "^0.0.2"
 duckdb = "^1.1.3"
+transformers = "^4.48.2"
+sentencepiece = "^0.2.0"
+bitsandbytes = "^0.45.1"
+accelerate = "^1.3.0"
+torch = { version = "^2.6.0", source= "pytorch" }
+torchvision = { version = "^0.21.0", source = "pytorch" }
+torchaudio = { version = "^2.6.0", source = "pytorch" }
+ollama = "^0.4.7"
+tabulate = "^0.9.0"
+
+[[tool.poetry.source]]
+name = "pytorch"
+url = "https://download.pytorch.org/whl/rocm6.2.4/"
+priority="supplemental"
+
 
 [build-system]
 requires = ["poetry-core"]
