--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ torchvision = { version = "^0.21.0", source = "pytorch" }
 torchaudio = { version = "^2.6.0", source = "pytorch" }
 ollama = "^0.4.7"
 tabulate = "^0.9.0"
+llama-index = "^0.12.30"
+llama-index-llms-ollama = "^0.5.4"
+llama-index-embeddings-ollama = "^0.6.0"
 
 [[tool.poetry.source]]
 name = "pytorch"
